src/test/ui/lifetime-errors/ex3-both-anon-regions-4.stderr
error[E0601]: main function not found

error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-4.rs:12:13
   |
11 | fn foo(z: &mut Vec<(&u8,&u8)>, (x, y): (&u8, &u8)) {
   |                     ---                 --- these references are not declared with the same lifetime...
12 |     z.push((x,y));
   |             ^ ...but data flows into `z` here

error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-4.rs:12:15
   |
11 | fn foo(z: &mut Vec<(&u8,&u8)>, (x, y): (&u8, &u8)) {
   |                         ---                  --- these references are not declared with the same lifetime...
12 |     z.push((x,y));
   |               ^ ...but data flows into `z` here

error: aborting due to 3 previous errors

